--- a/departments.html
+++ b/departments.html
@@ -756,7 +756,7 @@
                 <!-- Finance Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <h3 class="department-name">Finance Department</h3>
+                        <h3 class="department-name">Finance</h3>
                         <p class="department-head">Mr. Joshua Senyonga - Town Treasurer</p>
                     </div>
                     <div class="department-image">
@@ -782,7 +782,7 @@
                     </div>
                     <div class="department-info">
                         <p class="department-description">
-                            Oversees The department ensures operational efficiency, staff welfare, and effective coordination across all council departments, serving as the administrative backbone that enables the town council to fulfill its service delivery mandate to the community
+                        The department ensures operational efficiency, staff welfare, and effective coordination across all council departments, serving as the administrative backbone that enables the town council to fulfill its service delivery mandate to the community
                         </p>
                        
                         <button class="read-more-btn" data-department="administration">Read More</button>
@@ -792,8 +792,8 @@
                 <!-- Works Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <h3 class="department-name">Works Department</h3>
-                        <p class="department-head">Eng. Kanyike George William </p>
+                        <h3 class="department-name">Works </h3>
+                        <p class="department-head">Eng. Kanyike George William - Head </p>
                     </div>
                     <div class="department-image">
                         <img src="#">
@@ -810,7 +810,7 @@
                 <!-- Production Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <h3 class="department-name">Production Department</h3>
+                        <h3 class="department-name">Production</h3>
                         <p class="department-head">Mr. Kibumba Moses - Head</p>
                     </div>
                     <div class="department-image">
@@ -828,7 +828,7 @@
                 <!-- Audit Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <h3 class="department-name">Audit Department</h3>
+                        <h3 class="department-name">Internal Audit</h3>
                         <p class="department-head">Mr. Segonga Abbasi - Chief Auditor</p>
                     </div>
                     <div class="department-image">
@@ -850,7 +850,7 @@
                         <p class="department-head">Ms. Mwanja Doreen</p>
                     </div>
                     <div class="department-image">
-                        <img src="">
+                        <img src="#">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -865,7 +865,7 @@
                 <div class="department-card">
                     <div class="department-header">
                         <h3 class="department-name">Commerce & Trade</h3>
-                        <p class="department-head">Ms. Mirembe Nelly</p>
+                        <p class="department-head">Ms. Mirembe Nelly - Head</p>
                     </div>
                     <div class="department-image">
                         <img src="">
@@ -883,7 +883,7 @@
                 <div class="department-card">
                     <div class="department-header">
                         <h3 class="department-name">Public Health</h3>
-                        <p class="department-head">Mr. Muonge Evans & Ms. Nakyobe Annet Rhoda</p>
+                        <p class="department-head">Mr. Muonge Evans & Ms. Nakyobe Annet Rhoda - Heads of Department</p>
                     </div>
                     <div class="department-image">
                         <img src="">
