--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     <a href="#">Services</a>
                     <div class="dropdown-menu">
                         <a href="public-health.html"><i class="fas fa-heartbeat"></i>Public Health</a>
-                        <a href="waste-management.html"><i class="fas fa-trash-alt"></i>Waste Management</a>
+                        <a href="public-health.html"><i class="fas fa-trash-alt"></i>Waste Management</a>
                         <a href="road-maintenance.html"><i class="fas fa-road"></i>Road Maintenance</a>
                         <a href="business-licensing.html"><i class="fas fa-file-contract"></i>Business Licensing</a>
                         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
