--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                     <div class="dropdown-menu">
                         <a href="public-health.html"><i class="fas fa-heartbeat"></i>Public Health</a>
                         <a href="public-health.html"><i class="fas fa-trash-alt"></i>Waste Management</a>
-                        <a href="road-maintenance.html"><i class="fas fa-road"></i>Road Maintenance</a>
+                        <a href="road-maintenance.html"><i class="fas fa-road"></i>Road Maintenance and Public Infrastructure</a>
                         <a href="business-licensing.html"><i class="fas fa-file-contract"></i>Business Licensing</a>
                         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
                         <a href="youth-community.html"><i class="fas fa-hands-helping"></i>Youth & Community Development</a>
@@ -726,6 +726,7 @@
                 <li><a href="#">Tenders</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Witzenhausen</a></li>
+                <li><a href="#">FAQS</a></li>
                 <li><a href="#">Contact Us</a></li>
                 
             </ul>
