--- a/road-maintenance.html
+++ b/road-maintenance.html
@@ -750,15 +750,16 @@
                         <a href="public-health.html"><i class="fas fa-heartbeat"></i>Public Health</a>
                         <a href="waste-management.html"><i class="fas fa-trash-alt"></i>Waste Management</a>
                         <a href="road-maintenance.html"><i class="fas fa-road"></i>Road Maintenance</a>
-                        <a href="road-projects.html" class="active"><i class="fas fa-project-diagram"></i>Road Projects</a>
                         <a href="business-licensing.html"><i class="fas fa-file-contract"></i>Business Licensing</a>
                         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
+                        <a href="youth-community.html"><i class="fas fa-hands-helping"></i>Youth & Community Development</a>
                     </div>
                 </li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="tenders.html">Tenders</a></li>
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="witzenhausen.html">Witzenhausen</a></li>
+                <li><a href="FAQS.html">FAQS</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
