--- a/road-maintenance.html
+++ b/road-maintenance.html
@@ -855,9 +855,8 @@
                         </div>
                         <h3 class="service-desc-title">Public Infrastructure Maintenance & Construction</h3>
                         <p class="service-desc-text">
-                            Development and maintenance of essential public infrastructure including drainage systems, 
-                            culverts, retaining walls, and other road-related structures. Ensures proper water management 
-                            and structural integrity of the road network.
+                            Development and maintenance of essential public infrastructure including the abbatoir, 
+                            culverts, the market, Mayor's Garden amongst others.
                         </p>
                     </div>
                 </div>
