--- a/youth-community.html
+++ b/youth-community.html
@@ -633,51 +633,31 @@
             background: var(--light);
         }
 
-        .stories-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
-
-        .story-card {
+        .update-placeholder {
+            text-align: center;
+            padding: 60px 20px;
             background: white;
             border-radius: 8px;
-            overflow: hidden;
             box-shadow: 0 5px 15px rgba(0,0,0,0.08);
         }
 
-        .story-image {
-            height: 200px;
-            overflow: hidden;
-        }
-
-        .story-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .story-content {
-            padding: 25px;
-        }
-
-        .story-title {
-            font-size: 20px;
+        .update-icon {
+            font-size: 80px;
             color: var(--primary);
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
-        .story-program {
-            color: var(--secondary);
-            font-weight: 600;
+        .update-placeholder h3 {
+            font-size: 28px;
+            color: var(--primary);
             margin-bottom: 15px;
-            font-size: 14px;
         }
 
-        .story-description {
+        .update-placeholder p {
             color: var(--gray);
-            line-height: 1.6;
-            margin-bottom: 15px;
+            font-size: 18px;
+            max-width: 600px;
+            margin: 0 auto;
         }
 
         /* Footer */
@@ -1250,37 +1230,12 @@
                 <h2>Success Stories</h2>
                 <p>Inspiring stories from program beneficiaries in Kayunga</p>
             </div>
-            <div class="stories-container">
-                <div class="story-card">
-                    <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1551833997-05a7c6b8e167?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" alt="Youth Group Success">
-                    </div>
-                    <div class="story-content">
-                        <h3 class="story-title">Kayunga Youth Poultry Farmers</h3>
-                        <p class="story-program">Youth Livelihood Programme</p>
-                        <p class="story-description">A group of 12 youth received startup capital through YLP and established a successful poultry farming enterprise, creating employment and supplying eggs to local markets.</p>
-                    </div>
+            <div class="update-placeholder">
+                <div class="update-icon">
+                    <i class="fas fa-sync-alt"></i>
                 </div>
-                <div class="story-card">
-                    <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" alt="Women Group Success">
-                    </div>
-                    <div class="story-content">
-                        <h3 class="story-title">Namagabi Women Tailors</h3>
-                        <p class="story-program">Uganda Women Entrepreneurship Programme</p>
-                        <p class="story-description">Through UWEP, 15 women acquired tailoring machines and skills, establishing a thriving tailoring business that serves the community and provides stable incomes.</p>
-                    </div>
-                </div>
-                <div class="story-card">
-                    <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef?ixlib=rb-4.0.3&auto=format&fit=crop&w=1452&q=80" alt="Agricultural Success">
-                    </div>
-                    <div class="story-content">
-                        <h3 class="story-title">Bukolooto Maize Farmers</h3>
-                        <p class="story-program">Parish Development Model</p>
-                        <p class="story-description">Farmers in Bukolooto parish accessed improved seeds and training through PDM, increasing their maize yields by 60% and accessing better markets for their produce.</p>
-                    </div>
-                </div>
+                <h3>Content Coming Soon</h3>
+                <p>We are currently gathering inspiring success stories from our program beneficiaries. Check back soon to read about the amazing impact our empowerment programs are having in Kayunga communities.</p>
             </div>
         </div>
     </section>
