--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
     <header class="header-main">
         <div class="container">
-            <a href="history and background.html" class="logo" title="Return to Home">
+            <a href="index.html" class="logo" title="Return to Home">
                 <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg" alt="Uganda Coat of Arms">
                 <div class="logo-text">
                     <h1>KAYUNGA TOWN COUNCIL</h1>
@@ -705,7 +705,7 @@
                 <li class="dropdown">
                     <a href="#">About US</a>
                     <div class="dropdown-menu">
-                        <a href="history and background.html"><i class="fas fa-info-circle" ></i>About Us</a>
+                        <a href="about-us.html"><i class="fas fa-info-circle" ></i>About Us</a>
                         <a href="leadership.html"><i class="fas fa-users"></i>Leadership</a>
                         <a href="departments.html"><i class="fas fa-building"></i>Departments</a>
                         <a href="vision-mission.html"><i class="fas fa-bullseye"></i>Vision & Mission</a>
@@ -722,12 +722,12 @@
                         <a href="youth-community.html"><i class="fas fa-hands-helping"></i>Youth & Community Development</a>
                     </div>
                 </li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Tenders</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Witzenhausen</a></li>
-                <li><a href="#">FAQS</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="tenders.html">Tenders</a></li>
+                <li><a href="careers.html">Careers</a></li>
+                <li><a href="witzenhausen.html">Witzenhausen</a></li>
+                <li><a href="faqs.html">FAQS</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
                 
             </ul>
         </div>
@@ -862,22 +862,22 @@
                 <div class="footer-col">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about-us">About Us</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Media Center</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h3>Services</h3>
+                    <h3>Useful Links</h3>
                     <ul class="footer-links">
-                        <li><a href="public-health.html">Public Health</a></li>
-                        <li><a href="waste-management.html">Waste Management</a></li>
-                        <li><a href="road-maintenance.html">Road Maintenance</a></li>
-                        <li><a href="business-licensing.html">Business Licensing</a></li>
-                        <li><a href="education.html">Education</a></li>
-                        <li><a href="youth-community.html">Youth & Community Development</a></li>
+                        <li><a href="https://kayungahospital.go.ug/">Kayunga Regional Referral Hospital</a></li>
+                        <li><a href="kayunga.go.ug">Kayunga District Local Government</a></li>
+                        <li><a href="https://kayungacommunityclub.org/">Kayunga Community Club</a></li>
+                        <li><a href="https://nira.go.ug/">NIRA</a></li>
+                        <li><a href="https://statistics.ubos.org/nphc/drilldown?subregion=11&district=112&county=1122&subcounty=112206">UBOS - KAYUNGA TOWN COUNCIL</a></li>
+                        
                     </ul>
                 </div>
                 <div class="footer-col">
