--- a/contact-us.html
+++ b/contact-us.html
@@ -729,8 +729,8 @@
                         <div class="contact-details">
                             <h3>Working Hours</h3>
                             <p>Monday - Friday: 8:00 AM - 5:00 PM</p>
-                            <p>Saturday: 9:00 AM - 1:00 PM</p>
-                            <p>Sunday: Closed</p>
+                            <p>Saturday - Sunday: CLOSED</p>
+                            
                         </div>
                     </div>
                 </div>
